// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`table cell count cell count should break the table 1 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
  {
    "indent": 0,
    "raw": "| row 2 c1 |",
    "tokens": [
      {
        "raw": "| row 2 c1 |",
        "type": "text",
        "value": "| row 2 c1 |",
      },
    ],
    "type": "paragraph",
    "value": "| row 2 c1 |",
  },
]
`;

exports[`table cell count cell count should break the table 2 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
]
`;

exports[`table heading body separator should not parse as table with invalid separator: '|-|-|' 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": "-",
          "tokens": [
            {
              "raw": "-",
              "type": "text",
              "value": "-",
            },
          ],
        },
        {
          "raw": "-",
          "tokens": [
            {
              "raw": "-",
              "type": "text",
              "value": "-",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": false,
  },
]
`;

exports[`table heading body separator should parse a table with separator: '| :-------: | :---------: |' 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 2 c1 ",
          "tokens": [
            {
              "raw": "row 2 c1",
              "type": "text",
              "value": "row 2 c1",
            },
          ],
        },
        {
          "raw": " row 2 c2 ",
          "tokens": [
            {
              "raw": "row 2 c2",
              "type": "text",
              "value": "row 2 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
]
`;

exports[`table heading body separator should parse a table with separator: '| ------- | --------- |' 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 2 c1 ",
          "tokens": [
            {
              "raw": "row 2 c1",
              "type": "text",
              "value": "row 2 c1",
            },
          ],
        },
        {
          "raw": " row 2 c2 ",
          "tokens": [
            {
              "raw": "row 2 c2",
              "type": "text",
              "value": "row 2 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
]
`;

exports[`table heading body separator should parse a table with separator: '|:-------:|:---------:|' 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 2 c1 ",
          "tokens": [
            {
              "raw": "row 2 c1",
              "type": "text",
              "value": "row 2 c1",
            },
          ],
        },
        {
          "raw": " row 2 c2 ",
          "tokens": [
            {
              "raw": "row 2 c2",
              "type": "text",
              "value": "row 2 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
]
`;

exports[`table heading body separator should parse a table with separator: '|-------|-------|' 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 2 c1 ",
          "tokens": [
            {
              "raw": "row 2 c1",
              "type": "text",
              "value": "row 2 c1",
            },
          ],
        },
        {
          "raw": " row 2 c2 ",
          "tokens": [
            {
              "raw": "row 2 c2",
              "type": "text",
              "value": "row 2 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
]
`;

exports[`table indentation different indent header -> separator 1`] = `
[
  {
    "indent": 0,
    "raw": "| column 1 | column 2 |
    |---|---|
| row 1 c1 | row 1 c2 |",
    "tokens": [
      {
        "raw": "| column 1 | column 2 |     |---|---| | row 1 c1 | row 1 c2 |",
        "type": "text",
        "value": "| column 1 | column 2 |     |---|---| | row 1 c1 | row 1 c2 |",
      },
    ],
    "type": "paragraph",
    "value": "| column 1 | column 2 |     |---|---| | row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`table indentation different indent header, separator -> body row 1`] = `
[
  {
    "indent": 4,
    "language": null,
    "raw": "    | column 1 | column 2 |
    |---|---|",
    "type": "code-block",
    "value": "| column 1 | column 2 |
|---|---|",
  },
  {
    "indent": 0,
    "raw": "| row 1 c1 | row 1 c2 |",
    "tokens": [
      {
        "raw": "| row 1 c1 | row 1 c2 |",
        "type": "text",
        "value": "| row 1 c1 | row 1 c2 |",
      },
    ],
    "type": "paragraph",
    "value": "| row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`table indentation indent should break the table 1 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
  {
    "indent": 4,
    "raw": "    | row 2 c1 | row 2 c2 |",
    "tokens": [
      {
        "raw": "    | row 2 c1 | row 2 c2 |",
        "type": "text",
        "value": "    | row 2 c1 | row 2 c2 |",
      },
    ],
    "type": "paragraph",
    "value": "    | row 2 c1 | row 2 c2 |",
  },
]
`;

exports[`table indentation indent should break the table 2 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
  {
    "indent": 4,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
]
`;

exports[`table indentation the indented table 1`] = `
[
  {
    "indent": 2,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
]
`;

exports[`table is not a table false separator 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " --- ",
          "tokens": [
            {
              "raw": "---",
              "type": "text",
              "value": "---",
            },
          ],
        },
        {
          "raw": "--",
          "tokens": [
            {
              "raw": "--",
              "type": "text",
              "value": "--",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": false,
  },
]
`;

exports[`table is not a table only header 1`] = `
[
  {
    "indent": 0,
    "raw": "| column 1 | column 2 |",
    "tokens": [
      {
        "raw": "| column 1 | column 2 |",
        "type": "text",
        "value": "| column 1 | column 2 |",
      },
    ],
    "type": "paragraph",
    "value": "| column 1 | column 2 |",
  },
]
`;

exports[`table is not a table only header and separator 1`] = `
[
  {
    "indent": 0,
    "raw": "| column 1 | column 2 |
|---|---|",
    "tokens": [
      {
        "raw": "| column 1 | column 2 | |---|---|",
        "type": "text",
        "value": "| column 1 | column 2 | |---|---|",
      },
    ],
    "type": "paragraph",
    "value": "| column 1 | column 2 | |---|---|",
  },
]
`;

exports[`table is not a table other tokens in between 1 1`] = `
[
  {
    "indent": 0,
    "raw": "| column 1 | column 2 |",
    "tokens": [
      {
        "raw": "| column 1 | column 2 |",
        "type": "text",
        "value": "| column 1 | column 2 |",
      },
    ],
    "type": "paragraph",
    "value": "| column 1 | column 2 |",
  },
  {
    "type": "new-line",
  },
  {
    "indent": 0,
    "raw": "|---|---|
| row 1 c1 | row 1 c2 |",
    "tokens": [
      {
        "raw": "|---|---| | row 1 c1 | row 1 c2 |",
        "type": "text",
        "value": "|---|---| | row 1 c1 | row 1 c2 |",
      },
    ],
    "type": "paragraph",
    "value": "|---|---| | row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`table is not a table other tokens in between 2 1`] = `
[
  {
    "indent": 0,
    "raw": "| column 1 | column 2 |
|---|---|",
    "tokens": [
      {
        "raw": "| column 1 | column 2 | |---|---|",
        "type": "text",
        "value": "| column 1 | column 2 | |---|---|",
      },
    ],
    "type": "paragraph",
    "value": "| column 1 | column 2 | |---|---|",
  },
  {
    "type": "new-line",
  },
  {
    "indent": 0,
    "raw": "| row 1 c1 | row 1 c2 |",
    "tokens": [
      {
        "raw": "| row 1 c1 | row 1 c2 |",
        "type": "text",
        "value": "| row 1 c1 | row 1 c2 |",
      },
    ],
    "type": "paragraph",
    "value": "| row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`table is not a table other tokens in between 3 1`] = `
[
  {
    "indent": 0,
    "rows": [
      [
        {
          "raw": " column 1 ",
          "tokens": [
            {
              "raw": "column 1",
              "type": "text",
              "value": "column 1",
            },
          ],
        },
        {
          "raw": " column 2 ",
          "tokens": [
            {
              "raw": "column 2",
              "type": "text",
              "value": "column 2",
            },
          ],
        },
      ],
      [
        {
          "raw": " row 1 c1 ",
          "tokens": [
            {
              "raw": "row 1 c1",
              "type": "text",
              "value": "row 1 c1",
            },
          ],
        },
        {
          "raw": " row 1 c2 ",
          "tokens": [
            {
              "raw": "row 1 c2",
              "type": "text",
              "value": "row 1 c2",
            },
          ],
        },
      ],
    ],
    "type": "table",
    "withHeading": true,
  },
  {
    "type": "new-line",
  },
  {
    "indent": 0,
    "raw": "| row 2 c1 | row 2 c2 |",
    "tokens": [
      {
        "raw": "| row 2 c1 | row 2 c2 |",
        "type": "text",
        "value": "| row 2 c1 | row 2 c2 |",
      },
    ],
    "type": "paragraph",
    "value": "| row 2 c1 | row 2 c2 |",
  },
]
`;
